# kotomei_bot

./: .gitignore  Cargo.toml  Kotomei.toml  config.example.py  main.py
src/: main.rs
