[package]
name = "kotomei_bot"
version = "0.1.0"
authors = ["Balthild <ibalthild@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.106"
toml = "0.5.6"
teloxide = "0.2.0"
log = "0.4.8"
tokio = { version = "0.2.11", features = ["sync"] }
pretty_env_logger = "0.4.0"
rand = { version = "0.7.3", features = ["small_rng"] }
